@@ -10,3 +10,27 @@ Euler's formula states that
 \]
 
 Ain't that great!
+
+[env.equation]
+--
+a = b = c
+--
+
+
+[env.equation%numbered]
+--
+A = B = C
+--
+
+[env.equationalign]
+--
+a &= b = c \\
+x^2 &= 1
+--
+
+
+[env.equationalign%numbered]
+--
+A &= B = C \\
+Y^2 &= 2
+--
