@@ -3,9 +3,15 @@
 NOTE: View with Asciidoctor for best results.
 
 Next release::
-Introduce option as in [env.remark%plain] --
-Use normal (non-italic) text in the body
-of the environment.
+(1) Introduce option as in [env.remark%plain]
+to use normal (non-italic) text in the body
+of the environment. (2) Equations and equation
+alignments are now *not* numbered by default.
+To number an equation, do this:
+`[eq.equation%numbered]`. For equation
+alignments, do
+`[eq.equationalign%numbered]`.  Better for
+better style!
 
 1.5.0.3dev::
 Double exponents in display math are
